--- a/src/style.css
+++ b/src/style.css
@@ -42,7 +42,7 @@
 }
 
 html { /* has its maximum height set to the viewport's height, to later enable splitscreen scrolling on the divs sitting within it */
-    font-size: 18px;
+    font-size: 17px;
     height: 100%;
     max-height: 100%; 
     -webkit-tap-highlight-color: transparent;         
@@ -84,7 +84,7 @@ Other elements' widths and heights are calculated elsewhere, based on these */
 
     --highlight1: rgb(237, 255, 157);
     
-    --item-wd: 160px;
+    --item-wd: 155px;
     --item-wd-exp: 205px;
     --img-ht: 95px;
     --img-ht-exp: 120px;
@@ -96,6 +96,19 @@ Other elements' widths and heights are calculated elsewhere, based on these */
     --button-hover: rgb(255, 237, 157);
 }   
 
+@media(max-width:720px) {
+:root {
+    --item-wd-exp: 235px;
+    --item-wd: 150px;
+    --img-ht: 80px;
+}
+}
+@media(max-width:440px) {
+    :root {
+        --header-ht-mob: 6rem;    /* 1. the header's height on mobile */
+    }
+    }
+    
 
 /* TOP-LEVEL CONTAINERS (the body element contains 2 full-width rows: 'header' and 'main') ------ */
 
@@ -127,7 +140,7 @@ header {    /* is split into 2 divs sitting at extreme ends of the bar : 'h1-wra
     flex-direction: column; /* initially the byline sits under the title */
 }
 header .buttons { /* the open-about button */
-    margin-top: 0.2rem;
+    margin-top: 0.1rem;
     background-color: white;
     width: 4.8rem;
     height: fit-content;
@@ -137,7 +150,7 @@ header .buttons { /* the open-about button */
     margin: 0;
     padding: 0.1rem 0;
     position: fixed;
-    top: 0.9rem;
+    top: 1.2rem;
     right: 1.25rem;
     width: 3.6rem;
     z-index: 10090;
@@ -155,6 +168,7 @@ header .buttons { /* the open-about button */
     .cart-icon {display: none;}                /* the cart icon is hidden - the calculator column is always shown anyway from this point*/
     .byline {margin-top: 0.1rem;}
     header .buttons {margin-top: -0.2rem;}
+    #close-about {top: 0.9rem;}
 }
 
 
@@ -172,7 +186,7 @@ section {               /* the section elements have scrolling enabled within th
     width: 100%;        /* on smaller viewports the items section takes up the full width of the screen  */
     overflow-x: hidden; /* draggable divs can't increase the width of the items section */
     max-height: calc(100vh - var(--header-ht-mob)); /* to enable scrolling within the section */
-    padding: 6rem 1rem;
+    padding: 6rem 1.2rem;
     position: relative;
     transition: 0.25s;
     margin-top: 0;
@@ -186,6 +200,7 @@ section {               /* the section elements have scrolling enabled within th
     transition: width 0.3s ease;
     top: calc(var(--header-ht-mob));                /* it appears under the header row, */
     max-height: calc(100vh - var(--header-ht-mob)); /* it takes up the rest of the vertical screen-space under the header, */
+    min-height: calc(100vh - var(--header-ht-mob));
     right: 0px;
     z-index: 10052;     /* and it's stacked way above all other elements, esp the draggable divs */
     background-color: var(--cruncher-bg); 
@@ -206,6 +221,7 @@ section {               /* the section elements have scrolling enabled within th
         width: 0; /* its width is 0 initially */
         /* width: var(--cruncher-wd); /* its width is set via the variable above (CSS custom property) */
         max-height: none;
+        min-height: none;
         flex-grow: 1;
         flex-shrink: 0;
     }    
@@ -362,6 +378,8 @@ section {               /* the section elements have scrolling enabled within th
     border-bottom: 0.5px solid lightgray;
     border-right: 0.5px solid lightgray;
     box-shadow: 0px 0px 4px lightgray;
+    max-height: calc(100vh - var(--header-ht-mob));
+    overflow-y: scroll;
 }
 
 .instructions-wrap {
@@ -387,6 +405,17 @@ section {               /* the section elements have scrolling enabled within th
     margin-bottom: 0rem;
     margin-top: 1rem;
 
+}
+@media(max-width:440px) { /* under 440px, */
+    #instructions {
+        top: -1000vh;
+    }
+    .instructions-wrap {
+        padding-left: 6rem;
+        padding-top: calc(0.9rem + var(--header-ht-mob) - var(--header-ht));
+        padding-right: 6rem;
+        padding-bottom: 2rem;
+    }
 }
 
 
@@ -474,7 +503,7 @@ section {               /* the section elements have scrolling enabled within th
     padding:0;
     display: grid;
     grid-template-columns: repeat(auto-fill, 160px);
-    column-gap: 1rem;
+    column-gap: 1.2rem;
     row-gap: 2rem;
     justify-content: center;
 }
